documentation/0.10/_sources/components/play_sound.rst.txt
..
   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
   WARNING:  This is a generated file.  Do not edit it manually!
   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

.. index::
   single: Play Sound
   single: Actions; Play Sound

.. _Play Sound:

Play Sound
==========


Description
-----------
Play a `Sound Stimulus`


Signature
---------
``action/play_sound``


Required Parameters
-------------------

sound
^^^^^

Name of the sound to play



Placement
---------
.. list-table::
   :widths: auto
   :stub-columns: 1

   * - Allowed at top level:
     - No
   * - Allowed parent:
     - `Block`, `Conditionally Execute Actions (if)`, `List`, `Protocol`, `Render Actions`, `Repeat Actions (while)`, `Schedule Actions`, `Task System State`, `Trial`, `Unconditionally Execute Actions (else)`, `Variable`
